# upbit-autotrading

./: .env  .env.example  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TESTING.md  TEST_SUMMARY.md  UNIMPLEMENTED.md  docker-compose.yml  requirements.md  schema_init.sql  지침.md
dashboard-api/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
dashboard-api/app/: crypto_keys.py  db.py  deps.py  dockerctl.py  events.py  logging_.py  main.py  migrate.py  models.py  settings.py  upbit_accounts.py
dashboard-api/app/db/: engine.py
dashboard-api/app/routers/: __init__.py  accounts.py  api_aliases.py  bandit.py  config.py  configs.py  credentials.py  events.py  metrics.py  models.py  overview.py  query.py  regimes.py  safety.py  traders.py  trades.py  trainer.py
dashboard-api/app/services/: bandit.py  credentials.py  data_pipeline.py  model_evaluation.py  regime.py  safety_guard.py  trader_orchestrator.py
dashboard-api/tests/: conftest.py  test_data_pipeline.py  test_drift_detection.py
shared/: README.md  pyproject.toml
shared/shared/db/: engine.py
shared/shared/exchange/: fees.py
shared/shared/logging/: log_format.py  logger.py
shared/shared/settings/: config_schema.py  env.py
shared/shared/telegram/: notifier.py  templates.py
shared/shared/utils/: retry.py
trader/: Dockerfile  README.md  main.py  market_data.py  order_executor.py  position_manager.py  pyproject.toml  scoring.py  screener.py  trader.py  trading_engine.py  upbit_public.py
trader/indicators/: ta.py
trader/logging/: db_events.py
trader/presets/: crazy.py  loader.py  profit.py  safe.py  standard.py
trader/strategies/: base.py  registry.py
trader/strategies/buy/: breakout_volume.py  ma_pullback.py  (+2 more)
trader/trader/: main.py
trainer/: Dockerfile  README.md  main.py  pyproject.toml
trainer/trainer/: main.py
(+159 files in other folders)
