[project]
name = "trainer"
version = "1.8.0001"
description = "Upbit Auto-Trading Platform trainer (v1.8-0001)"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.ruff]
line-length = 100
